# scribelog

./: CMakeLists.txt  pimpmylog.files
src/: CMakeLists.txt  configparser.cc  configparser.hh  fork.cc  fork.hh  fork.hxx  log.cc  log.hh  main.cc
tests/: CMakeLists.txt  configparsertest.cc
